# flac-emscripten

./: .gitignore  CMakeLists.txt  README.md  index.html  local-build.cmd
build.emscripten/: index.html
file/: CMakeLists.txt  Makefile.am  main.cpp
src/: main.cpp
www/: index.html
